kubernetes/chronograf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chronograf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chronograf
  template:
    metadata:
      labels:
        app: chronograf
    spec:
      containers:
        - name: chronograf
          image: chronograf:1.9
          imagePullPolicy: Always
          ports:
          - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: chronograf
spec:
  type: ClusterIP
  ports:
  - port: 8888
    targetPort: 8888
  selector:
    app: chronograf
