kubernetes/kafka-connect.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-connect
  labels:
    app: kafka-connect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-connect
  template:
    metadata:
      labels:
        app: kafka-connect
    spec:
      containers:
      - name: kafka-connect
        image: 853660505909.dkr.ecr.ap-northeast-2.amazonaws.com/eks-test:custom-kafka-connect
        ports:
          - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-connect
spec:
  type: ClusterIP
  ports:
    - port: 8083
      targetPort: 8083
      name: rest
  selector:
    app: kafka-connect
